argocd/argocd-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-referencegrant
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: istio-ingress
  - group: gateway.networking.k8s.io
    kind: GRPCRoute
    namespace: istio-ingress
  to:
  - group: ""
    kind: Service
    name: argocd-server
