argocd/argocd-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpcroute
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: nginx-gateway
  hostnames:
  - "argocd.local"
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
      weight: 1
